added spring to project and configuration for integration test